# nim-ffi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.nims  ffi.nim  ffi.nimble  tsan.supp  versions.env
.github/: versions.env
.github/workflows/: ci.yml  linters.yml  nimble-job.yml  test.yml  tests-sanitized.yml
docs/: design-abi-format.md  design-host-callbacks.md  future-work.md
docs/decisions/: 0001-collapse-dual-c-naming.md
examples/aggregator/: aggregator.nim
examples/aggregator/c_bindings/: CMakeLists.txt  aggregator.h  main.c
examples/cross_lib/: main.c
examples/echo/: echo.nim  echo.nimble
examples/echo/c_abi_bindings/: CMakeLists.txt  README.md  echo.h
examples/echo/c_bindings/: CMakeLists.txt  echo.h  nim_ffi_cbor.h  nim_ffi_prelude.h
examples/echo/cpp_bindings/: CMakeLists.txt  echo.h  echo.hpp  echo_cbor.hpp
examples/echoer/: echoer.nim
examples/echoer/c_bindings/: CMakeLists.txt  echoer.h
examples/host_demo/: host_demo.nim
examples/host_demo/go_bindings/: .gitignore  Makefile  go.mod  host_demo.go  host_demo.h
examples/host_demo/go_bindings/example/: go.mod  main.go
examples/nim_timer/: README.md  nim_timer.nim  nim_timer.nimble
examples/nim_timer/cpp_bindings/: CMakeLists.txt  README.md  main.cpp  nimtimer.hpp
examples/nim_timer/rust_bindings/: Cargo.toml  README.md  build.rs
examples/nim_timer/rust_bindings/src/: api.rs  ffi.rs  lib.rs  types.rs
examples/nim_timer/rust_client/: Cargo.toml  README.md
examples/nim_timer/rust_client/src/: main.rs  tokio_main.rs
examples/skeleton/: README.md  skeleton.nim  skeleton.nimble
examples/skeleton/cpp_bindings/: CMakeLists.txt  skeleton.hpp
examples/stress/: error_isolation.c  multi_context.c  sync_helper.h  threaded_hammer.c  triple_pipeline.c
examples/timer/: README.md  timer.nim  timer.nimble
examples/timer/android/: .gitignore  README.md  build-libs.sh  build.gradle.kts  settings.gradle.kts
examples/timer/android/jni/: my_timer_jni.c
examples/timer/c_bindings/: CMakeLists.txt  Makefile  README.md  example.c  main.c  my_timer.h  my_timer_cbor.h  nim_ffi_cbor.h  nim_ffi_sync.h
examples/timer/cddl_bindings/: my_timer.cddl  timer.cddl
examples/timer/cpp_bindings/: CMakeLists.txt  README.md  main.cpp  my_timer.hpp  timer.hpp
examples/timer/cpp_native/: .gitignore  Makefile  README.md  main.cpp
examples/timer/cpp_native_bindings/: Makefile  README.md  main.cpp  my_timer.hpp  my_timer_native.hpp
examples/timer/go_bindings/: .gitignore  Makefile  README.md  go.mod  my_timer.go
examples/timer/go_bindings/example/: go.mod  main.go
examples/timer/ios/: .gitignore  Package.swift  README.md  build-xcframework.sh
examples/timer/ios/cheaders/: module.modulemap  my_timer.h  my_timer_cbor.h
examples/timer/ipc/: .gitignore  Makefile  README.md  client.c  proto.h  server.c
examples/timer/ipc_chronos/: .gitignore  README.md  client.nim  serve.nim  serve_host.nim
examples/timer/rust_bindings/: Cargo.toml  README.md  build.rs
examples/timer/rust_bindings/examples/: main.rs  tokio_main.rs
examples/timer/rust_bindings/src/: api.rs  ffi.rs  lib.rs  types.rs
examples/timer/rust_client/: Cargo.toml  README.md
examples/timer/rust_client/src/: main.rs  tokio_main.rs
examples/timer/rust_native_bindings/: .gitignore  Cargo.toml  README.md
ffi/: alloc.nim  cbor_serial.nim  event_thread.nim  ffi_context.nim  ffi_context_pool.nim  ffi_events.nim  ffi_handles.nim  ffi_host.nim  ffi_request_queue.nim  ffi_thread.nim  ffi_thread_request.nim  ffi_types.nim  logging.nim  serial.nim
ffi/codegen/: c.nim  c_abi.nim  c_cpp_common.nim  cddl.nim  consts.nim  cpp.nim  cpp_native.nim  go.nim  kotlin.nim  meta.nim  rust.nim  rust_cbor.nim  rust_native.nim  string_helpers.nim  swift.nim  types_ir.nim
ffi/codegen/templates/: nim_ffi_lib.cmake
ffi/internal/: c_macro_helpers.nim  c_wire.nim  ffi_export.nim  ffi_library.nim  ffi_macro.nim  ffi_scalar.nim  native_pod.nim
tests/: test_alloc  test_alloc.nim  test_c_codegen.nim  test_c_macro_helpers.nim  test_c_thread_request.nim  test_cbor_serial.nim  test_cddl_codegen.nim  test_ctx_validation  test_ctx_validation.nim  test_ffi_context  test_ffi_context.nim  test_gc_compat.nim  test_meta.nim  test_nim_native_api.nim  test_serial.nim  test_string_helpers.nim  test_wire_compat.nim
tests/bench/: README.md  bench_codec.nim  bench_ffi_submit.nim  run_bench.sh
tests/bench/c_raw/: CMakeLists.txt  bench_timer_raw.c
tests/bench/cpp_cbor/: CMakeLists.txt  bench_timer_cbor.cpp
tests/e2e/c/: .gitignore  CMakeLists.txt  Makefile  README.md  stress.c  test_timer_e2e.c
tests/e2e/c_abi/: CMakeLists.txt  lsan.supp  test_echo_c_abi.c
tests/e2e/cpp/: CMakeLists.txt  README.md  test_timer_e2e.cpp
tests/e2e/ipc/: .gitignore  run_roundtrip.nim
tests/e2e/rust/: Cargo.toml  README.md  build.rs
tests/e2e/rust/tests/: e2e.rs
tests/unit/: fixture_gen.nim  mainprefix_fixture.nim  test_abi_format.nim  test_alloc.nim  test_c_abi_codegen.nim  test_c_abi_dispatch.nim  test_c_codegen.nim  test_c_macro_helpers.nim  test_c_thread_request.nim  test_c_wire.nim  test_cddl_codegen.nim  test_ctx_validation.nim  test_doc_extraction.nim  test_doc_propagation.nim  test_event_dispatch.nim  test_event_listener.nim  test_event_thread.nim  test_ffi_const.nim  test_ffi_context.nim  test_ffi_enum.nim  test_ffi_handle.nim  test_ffi_host_e2e.nim  test_ffi_host_macro.nim  test_ffi_teardown.nim  test_ffistatic_reject.nim  test_gc_compat.nim  test_host_callbacks.nim  test_main_prefix_validation.nim  test_meta.nim  test_native_events.nim  test_native_pod_types.nim  test_nim_native_api.nim  test_rust_codegen.nim  test_scalar_fastpath.nim  test_scalar_skip_gen.nim  test_serial.nim  test_string_helpers.nim  test_types_ir.nim  test_wire_compat.nim  zz_exit.nim  (+1 more)
tests/unit/fixtures/: consts_fixture.nim  enum_abi_c_field_fixture.nim  enum_abi_c_type_fixture.nim  enum_fixture.nim  ffistatic_abi_c_scalar_fixture.nim  ffistatic_handle_param_fixture.nim  ffistatic_handle_return_fixture.nim  ffistatic_ok_fixture.nim  scalar_skip_fixture.nim
(+21 files in other folders)
