[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nimtimer = { path = "../rust_bindings" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "rust_client"
path = "src/main.rs"

[[bin]]
name = "tokio_client"
path = "src/tokio_main.rs"
